Fix dark mode bugs

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -51,6 +51,36 @@ body {
         border-bottom: 5px solid var(--border-muted);
         padding-bottom: 25px;
     }
+
+    .navbar-default .navbar-nav > .open > a,
+    .navbar-default .navbar-nav > .open > a:hover {
+        color: var(--text-color);
+    }
+}
+
+@media (max-width: 767px) {
+    .navbar-default .navbar-nav > li > a,
+    .navbar-default .navbar-nav .open .dropdown-menu > li > a {
+        color: var(--text-color);
+    }
+
+    .navbar-default .navbar-nav > li > a:hover {
+        color: var(--btn-active-color);
+        border-left: 5px solid var(--border-color);
+        padding-left: 10px;
+    }
+
+    .navbar-default .navbar-nav .open .dropdown-menu > li > a:hover {
+        color: var(--btn-active-color);
+        border-left: 5px solid var(--border-color);
+        padding-left: 20px;
+    }
+
+
+    .navbar-default .navbar-nav > .open > a,
+    .navbar-default .navbar-nav > .open > a:hover {
+        color: var(--text-muted);
+    }
 }
 
 .navbar-default {
@@ -61,6 +91,18 @@ body {
 .navbar-default .navbar-brand, .navbar-default .navbar-brand:hover {
     color: var(--text-color);
     font-weight: bold;
+}
+
+.navbar-collapse {
+    box-shadow: none;
+}
+
+.navbar-default .navbar-toggle {
+    border-color: var(--border-color);
+}
+
+.navbar-default .navbar-toggle .icon-bar {
+    background-color: var(--text-muted);
 }
 
 #nav-sign-up {
